# collection_closet

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  collection_closet.cpp  collection_closet.h  collection_closet.ui  format.cpp  format.h  format_widget.cpp  format_widget.h  login_widget.cpp  login_widget.h  login_widget.ui  main.cpp  object.cpp  object.h  object_widget.cpp  object_widget.h  operation_widget.cpp  operation_widget.h  resource.qrc  types.h
src/resources/: collection_closet.qm  collection_closet.qph  collection_closet.ts
